arreglada altura del aside de menu en desktop agregado título a la página de index

--- a/css/style.css
+++ b/css/style.css
@@ -595,7 +595,8 @@ justify-content: center;
 
     .menu_container{
         flex-direction: row;
-        height: 100vh
+        align-items: flex-start;
+        height: 100vh;
     }
     .menu_item_container{
         width: 70%;
